<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ProgressBar
            android:id="@+id/prMainWaiting"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtMainState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/main_state_default"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic" />

    </LinearLayout>

    <Button
        android:id="@+id/btMainConnect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_connect" />

    <Button
        android:id="@+id/btMainDisconnect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_disconnect" />

    <Space
            android:layout_width="fill_parent"
            android:layout_height="80px"
            />

    <Button
        android:id="@+id/btMainMazeActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_maze_activity" />

    <Button
        android:id="@+id/btMainWriteActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/main_write_activity" />

    <Button
        android:id="@+id/btMainReadActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_read_activity" />

    <Button
            android:id="@+id/btMainTemperatureActivity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_temperature_activity"
        android:enabled="true" />

    <Button
        android:id="@+id/btMainLisaActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_lisa_activity" />

</LinearLayout>
