<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReadActivity" >

    <EditText
        android:id="@+id/txtRAToSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ra_tosend_hing" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btRASend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ra_cmd_send" />

    <Button
        android:id="@+id/btRAClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ra_cmd_clear" />

    <TextView
        android:id="@+id/txtRALog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>

</LinearLayout>